<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_contact">Contact</string>

    <string name="text_intro_label">Droid Desserts</string>

    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_desciption">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="your_order_label">Your order</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="name_label">Name</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="enter_phone_hint">Enter your phone number</string>
    <string name="enter_notes_hint">Enter your notes</string>
    <string name="notes_label">Notes</string>
    <string name="phone_label">Phone</string>
    <string name="adress_label">Address</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
